--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -42,6 +42,7 @@ li a:hover:not(.active) {
 </head>
 <body>
 		<ul>
+			<li><a href="">Home</a></li>
 			<li><a href="test/">Word </a></li>
 		</ul>
 		
